client/src/App.css
#root {
  width: 50%;
  max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
}

.home {
  text-align: center;
}

.home h1 {
  font-size: 3rem;
  line-height: 1.1;
  margin-bottom: 0px;
}

.home h2 {
  font-size: 1.5rem;
  margin-bottom: 3rem;
}

.form {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.input-box {
  display: flex;
  flex-direction: column;
  margin-bottom: 1.5rem;
  width: 300px;
}

.input-box label {
  text-align: left;
  margin-bottom: 0.5rem;
  font-weight: 500;
}

.input-box input {
  padding: 0.75rem;
  font-size: 1rem;
  border: 0px;
  border-radius: 0.75rem;
}

.home .code-input {
  text-transform: uppercase;
}

.home button {
  display: block;
  text-align: center;
  width: 18.75rem;
  font-size: 1rem;
  padding: 0.7em 1.2em;
  border-radius: 1rem;
  border: 1px solid transparent;
  font-weight: 500;
  font-family: inherit;
  background: #1C2541;
  cursor: pointer;
  transition: border-color 0.25s;
}

.home button:hover {
  background: #445ba0;
}

.host-div {
  height: 15vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.host-div h2 {
  font-weight: 500;
  margin-bottom: 1rem;
}

/* HostView */

.current {
  position: fixed;
  top: 0;
  left: 5vw;
  font-size: 0.8rem;
  display: flex;
  height: 5vh;
  align-items: center;
}

.current .song {
  position: fixed;
  left: 5.5vw;
  width: 45%;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.current .singer {
  position: fixed;
  right: 5.5vw;
  width: 40%;
  text-align: right;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}


.theater {
  display: flex;
  flex-direction: column;
  position: fixed;
  top: 5vh;
  left: 5vw;
  z-index: -1;
  width: 90vw;
  height: 88vh;
  overflow: hidden;
  text-align: center;
  justify-content: center;
  background-color: #0e0e0e;
}

.theater p {
  font-size: 25px;
  margin: 0.25rem auto;
}

.theater iframe {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  min-width: 100%;
  min-height: 100%;
}

.footer {
  width: 100vw;
  padding: 0 5vw;
  height: 7vh;
  display: flex;
  justify-content: space-between;
  align-items: center;
  box-sizing: border-box;
  position: fixed;
  bottom: 0;
  left: 0;
  background: linear-gradient(#08002b, #28243c);
}

.num-users {
  font-size: 2rem;
  width: 20%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.num-users h2 {
  margin-left: 10%;
  min-width: 50%;
}

.room-info {
  text-align: center;
  margin: 0.75rem auto;
}

.room-info h2, 
.room-info p {
  margin: 0;
}

.room-info h2 {
  font-size: 1.5rem;
}

.queue-info {
  font-size: 0.7rem;
  width: 20%;
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.queue-info h2 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin: 0;
}

.queue-info button {
  display: block;
  margin: auto;
  border: 1px solid transparent;
  border-radius: 0.5rem;
  background: #1C2541;
  padding: 0.5rem;
  transition: border-color 0.25s;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  margin-top: 0.25rem;
  font-size: 0.7rem;
}
.queue-info button:hover {
  background: #445ba0;
}

/* UserView */

.spinner {
  margin: 20px 0;
  border: 6px solid #1a1a1a;
  border-top: 6px solid #8497f7;
  border-radius: 50%;
  width: 40px;
  height: 40px;
  animation: spin 1s linear infinite;
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

